Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -42,7 +42,7 @@ the newly created container. */
   height:100vh;
   border: 2px solid #018571;
   border-radius: 25px;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 #header{
@@ -73,7 +73,7 @@ and also changed (increased) the size of the text. */
 }
 
 #copyright {
-  position: absolute;
+  position: relative;
   width: 1000px;
   text-align: center;
   bottom: 20px;
